--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,15 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>jib-maven-helm</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>jib-maven-Helm</name>
     <description>jib-maven-Helm</description>
     <properties>
         <java.version>11</java.version>
-        <docker.image.prefix>devOps</docker.image.prefix>
         <docker.username>dogandemir51</docker.username>
-        <docker.password>dembaba33</docker.password>
     </properties>
     <dependencies>
         <dependency>
@@ -87,6 +84,10 @@
                                                 <port>8080</port>
                                             </ports>
                                             <format>OCI</format>
+                                            <labels>
+                                                <jira>JAH</jira>
+                                                <twistlock>jib-maven-plugin-twistlock</twistlock>
+                                            </labels>
                                         </container>
                                         <to>
                                             <image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
